[package]
name = "metrics-exporter-dogstatsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.20"
metrics-util = { version = "0.14" , default-features = false, features = ["recency", "registry", "summary"] }
thiserror = { version = "1", default-features = false }
quanta = { version = "0.10.0", default-features = false }
indexmap = { version = "1", default-features = false }
portable-atomic = "0.3"

tokio = { version = "1", features = ["rt", "net", "time"] }
tracing = { version = "0.1.26" }

