[package]
name = "metrics-exporter-dogstatsd"
version = "0.8.0"
authors = ["Valentino Volonghi <dialtone@nextroll.com>"]
edition = "2021"
rust-version="1.61.0"

license = "MIT"

description = "A metrics-compatible exporter for sending metrics to Statsd/Dogstatsd."
homepage = "https://github.com/dialtone/metrics-exporter-dogstatsd"
repository = "https://github.com/dialtone/metrics-exporter-dogstatsd"
documentation = "https://docs.rs/metrics-exporter-dogstatsd"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "statsd"]

[dependencies]
metrics = "0.24"
metrics-util = { version = "0.18", default-features = false, features = ["recency", "registry", "summary"] }
thiserror = { version = "1", default-features = false }
quanta = { version = "0.12.0", default-features = false }
indexmap = { version = "1", default-features = false }

tokio = { version = "1", features = ["rt", "net", "time"] }
tracing = { version = "0.1.26" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
